# getdate_next

./: Makefile  README.md  SPEC.md  __init__.py  demo_moneyday.py  getdate.py  lexer.py  pyproject.toml  setup.py  test_getdate.py
perl/lib/Getdate/: DateInterval.pm  DateParseError.pm  DateTime.pm  Getdate.pm  Lexer.pm  Parser.pm  TimezoneData.pm
perl/t/: 01-basic.t
php/: README.md  composer.json
php/src/: DateParseError.php  DayInfo.php  Getdate.php  Lexer.php  Parser.php  TimezoneData.php
php/tests/: GetdateTest.php
src/getdate_next/: __init__.py  _version.py  getdate.py  lexer.py  parser.py  timezone_data.py  validation.py
tests/: test_getdate.py
