[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getdate-next"
version = "0.1.0"
description = "Natural language date expression parser"
readme = "SPEC.md"
requires-python = ">=3.9,<3.13"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "jam", email = "jam@zoidtechnologies.com"}
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["getdate*"]
