[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getdate-next"
dynamic = ["version"]
description = "Natural language date expression parser"
readme = "SPEC.md"
requires-python = ">=3.9,<3.13"
license = "GPL-2.0-or-later"
authors = [
    {name = "jam", email = "jam@zoidtechnologies.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["getdate*"]
